log/build_2025-02-20_13-05-26/vision/stderr.log
  File "/home/mo/Thesis/install/vision/lib/python3.8/site-packages/vision/yolov8_inference.py", line 143
    self.yolo_postprocessor.interpolate_path(path = self.filtered_hooks_dict[])
                                                                             ^
SyntaxError: invalid syntax

